--- a/css/main.css
+++ b/css/main.css
@@ -1,54 +1,117 @@
 /* Estilos básicos */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #000000;
-    margin: 0;
-    padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #ff0000;
+  margin: 0;
+  padding: 0;
 }
 
 h1,
 h2,
 h3 {
-    color: #ffffff;
+  color: #ffffff;
 }
 
-section{
-    color: rgb(255, 255, 255);
+section {
+  color: rgb(255, 255, 255);
 }
 
 #inicio {
-    font-size: larger;
+  font-size: larger;
 }
 
-.emphasis{
-    text-align: center
+.emphasis {
+  text-align: center;
 }
 
-h1{
-    color: rgb(255, 238, 0);
-    font-family: fantasy;
-    text-align: center;
-   letter-spacing:5rem;
-    font-size: 9rem
+h1 {
+  color: rgb(255, 238, 0);
+  font-family: fantasy;
+  text-align: center;
+  letter-spacing: 5rem;
+  font-size: 9rem;
 }
 
-h2{
-    color: rgb(0, 255, 42);
-    font-family: fantasy;
-    text-align: center;
-   letter-spacing:5rem;
-    font-size: 9rem 
+h2 {
+  color: rgb(0, 255, 42);
+  font-family: fantasy;
+  text-align: center;
+  letter-spacing: 5rem;
+  font-size: 9rem;
 }
 
-h3{
-    background-color: aqua;
-    color: rgb(255, 0, 0);
-    font-family: fantasy;
-    text-align: center;
-   letter-spacing:5rem;
-    font-size: 9rem 
+h3 {
+  background-color: aqua;
+  color: rgb(255, 0, 0);
+  font-family: fantasy;
+  text-align: center;
+  letter-spacing: 5rem;
+  font-size: 9rem;
 }
 
-h4{
-    color: #ffffff;
+h4 {
+  color: #ffffff;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column-reverse;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.flex-items:nth-child(1) {
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+}
+
+.flex-items:nth-child(2) {
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+}
+
+.flex-items:nth-child(3) {
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+}
+
+.flex-items:nth-child(4) {
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+}
+
+.parent {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr) 2fr repeat(2, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.div1 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.div2 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.div3 {
+  grid-area: 1 / 3 / 3 / 6;
 }
