--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,13 @@ body {
   padding: 0;
 }
 
+p{
+  font-family: "Outfit", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+
+}
 h1,
 h2,
 h3 {
@@ -115,3 +122,4 @@ h4 {
 .div3 {
   grid-area: 1 / 3 / 3 / 6;
 }
+
