--- a/css/base.css
+++ b/css/base.css
@@ -4,6 +4,7 @@ body {
 }
 
 body {
+	background-color:var(--background);
 	font-family: 'Helvetica Neue', sans-serif;
 	justify-content: center;
 	align-items: center;
@@ -15,7 +16,6 @@ body {
 	min-height: 100vh;
 	transition: color 0.3s, background-color 0.3s;
 	background-color: var(--background);
-	color: var(--secondary-foreground);
 }
 
 /*  When the body has display: flex;
