--- a/SOW/estilos.css
+++ b/SOW/estilos.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: rgb(168, 242, 252);
+    background-color: rgb(255, 255, 255);
     font-family: Arial, sans-serif;
     font-size: 1.2rem; /* Tamaño de texto por defecto */
     line-height: 1.6;
@@ -22,6 +22,25 @@ header {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombras para darle un efecto visual */
 }
 
+.iframe-container {
+    position: relative;
+    width:80%;
+    max-width: 600px;
+    padding-bottom: 45%; /* Relación de aspecto 16:9 */
+    height: 0;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0%;
+}
+
 nav ul {
     list-style: none;
     display: flex;
@@ -36,7 +55,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: #f39c12;
+    background-color: #e97100;
 }
 
 main {
@@ -48,7 +67,6 @@ section {
 }
 
 h2 {
-    v
     margin-bottom: 10px;
     color: #333;
 }
